cluster/assets/eck-sbox001-filebeat-cr.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: asset-sbox-eck
