cluster/assets/falco-sbox011-helm.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: asset-sbox-falco
