cluster/assets/kafka-sbox001-cr.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: asset-sbox-kafka
  labels:
    project: assets
    group: kafka
