cluster/assets/mariadb-sbox001-cr.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: asset-sbox-mariadb
