cluster/assets/postgres-sbox001-cr.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: asset-sbox-postgres
