cluster/assets/kafka-sbox001-logstash.yaml
apiVersion: v1
kind: Service
metadata:
  name: logstash-sbox001-svc
  namespace: asset-sbox-eck
spec:
  ports:
    - port: 80 
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: logstash
  type: ClusterIP
