cluster/assets/eck-default-all.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kibana-route
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`kb.v2.miom.am`)
      kind: Rule
      services:
        - name: kibana-kb-http
          port: 5601
          scheme: https
          passHostHeader: true
          serversTransport: skipverify
  tls:
    secretName: kb-acme
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: elasticsearch-route
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`es.v2.miom.am`)
      kind: Rule
      services:
        - name: elasticsearch-es-http
          port: 9200
          scheme: https
          passHostHeader: true
          serversTransport: skipverify
  tls:
    secretName: es-acme
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: fleet-route
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`fleet.v2.miom.am`)
      kind: Rule
      services:
        - name: fleet-server-agent-http
          port: 8220
          scheme: https
          passHostHeader: true
          serversTransport: skipverify
  tls:
    secretName: fleet-server-acme
