cluster/assets/eck-sbox001-cr.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: asset-sbox-eck
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: eck-sbox001-kb-ingressroute
  namespace: asset-sbox-eck
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`kibana.v2.miom.am`)
      kind: Rule
      services:
        - name: eck-sbox001-kb-kb-http
          namespace: asset-sbox-eck
          port: 5601
          scheme: https
          passHostHeader: true
          serversTransport: skipverify 
  tls:
    secretName: tls-kibana.v2.miom.am
